register new classes and import the using

--- a/BlazorInventor/_Imports.razor
+++ b/BlazorInventor/_Imports.razor
@@ -8,11 +8,19 @@
 @using Microsoft.JSInterop
 @using BlazorInventor
 @using BlazorInventor.Shared
-@using DBInventorLibrary.DataAccess;
 @using BlazorInventor.Model;
+@using BlazorInventor.Component
+
+@using DBInventorLibrary.DataAccess.Bands;
+@using DBInventorLibrary.DataAccess.InventorData;
+@using DBInventorLibrary.DataAccess.Materials;
+@using DBInventorLibrary.DataAccess.Wagens;
+@using DBInventorLibrary.DataAccess.Controllers;
+@using DBInventorLibrary.DataAccess.InventorData.InventorMaterials
+
 @using DBInventorLibrary.Models;
 @using DBInventorLibrary.Models.MaterialsModels;
 @using DBInventorLibrary.Models.WagensModel;
 @using DBInventorLibrary.Models.Bands
 @using DBInventorLibrary.Models.ControllerModels
-@using BlazorInventor.Component
+@using DBInventorLibrary.Models.Inventor
