--- a/BlazorInventor/Component/AddWagenComponent.razor
+++ b/BlazorInventor/Component/AddWagenComponent.razor
@@ -1,4 +1,10 @@
-﻿@inject ISingleWagenData singleWagen
+﻿
+@*
+@inject ISingleWagenData singleWagen
+
+*@
+@inject IDataBase<SingleWagenModel> singleWagen
+
 <h3>Add Wagens</h3>
 
 @* dialog to show when we click at the list item to add to new band*@
@@ -49,6 +55,7 @@
     </div>
 </div>
 @code {
+    private bool showModal = false;
 
     private string filter;
     private string selectedmaterialsName;
@@ -76,7 +83,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        wagens = await singleWagen.GetWagenAsync();
+        wagens = await singleWagen.GetAllAsync();
     }
 
     protected void ConfirmAddPosition(SingleWagenModel add)
@@ -123,7 +130,7 @@
     // auto complete functions
     private async Task HandleInput(ChangeEventArgs e)
     {
-        var filterWagens = await singleWagen.GetWagenAsync();
+        var filterWagens = await singleWagen.GetAllAsync();
         filter = e.Value?.ToString();
         if (filter?.Length >= 2)
         {
