add js script to download files

--- a/BlazorInventor/Pages/_Layout.cshtml
+++ b/BlazorInventor/Pages/_Layout.cshtml
@@ -33,5 +33,6 @@
 
     @*for toast js we create*@
     <script src="./JS/toastScript.js" type="text/javascript"></script>
+    <script src="./JS/downloadFile.js"></script>
 </body>
 </html>
